Refatora código para melhorar desempenho e legibilidade
- Usando o Pandas para carregar os dados
- Importando o train_test_split da biblioteca sklearn para dividir os dados e criar a matriz de usuário-item para o conjunto de treinamento
- Importar a função cosine_similarity da biblioteca sklearn para calcular a similaridade do cosseno, metodo de similaridade escolhido
- Função para prever a nota de um usuário para um item com base na similaridade do usuário
- importar a função mean_squared_error da biblioteca sklearn para calcular o erro quadrático médio (MSE)
- importar a função sqrt da biblioteca numpy para calcular a raiz quadrada
- Função para recomendar os top N itens para um usuário com base na similaridade do usuário

--- a/Untitle.ipynb
+++ b/Untitle.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -45,15 +45,15 @@
        " 4        5   33      F       other    15213)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Usando o Pandas para carregar os dados\n",
     "import pandas as pd\n",
     "\n",
-    "# Carregar os dados\n",
     "ratings = pd.read_csv('u.data', sep='\\t', names=['user_id', 'item_id', 'rating', 'timestamp'])\n",
     "movies = pd.read_csv('u.item', sep='|', names=['item_id', 'title'], usecols=[0, 1], encoding='latin-1')\n",
     "users = pd.read_csv('u.user', sep='|', names=['user_id', 'age', 'gender', 'occupation', 'zip_code'])\n",
@@ -72,10 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importando o train_test_split da biblioteca sklearn para dividir os dados e criar a matriz de usuário-item para o conjunto de treinamento\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Dividir os dados em 80% para treinamento e 20% para validação\n",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -321,12 +322,13 @@
        "[5 rows x 943 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Importar a função cosine_similarity da biblioteca sklearn para calcular a similaridade do cosseno, metodo de similaridade escolhido\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "# Calcular a similaridade do cosseno entre os usuários\n",
@@ -345,10 +347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Função para prever a nota de um usuário para um item com base na similaridade do usuário\n",
     "def predict_rating(user_id, item_id, train_matrix, user_similarity_df):\n",
     "    # Obter a similaridade do usuário com todos os outros usuários\n",
     "    user_similarities = user_similarity_df.loc[user_id]\n",
@@ -383,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -395,6 +398,8 @@
     }
    ],
    "source": [
+    "# importar a função mean_squared_error da biblioteca sklearn para calcular o erro quadrático médio (MSE)\n",
+    "# importar a função sqrt da biblioteca numpy para calcular a raiz quadrada\n",
     "import numpy as np\n",
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
@@ -413,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -431,6 +436,11 @@
     }
    ],
    "source": [
+    "# Função para recomendar os top N itens para um usuário com base na similaridade do usuário\n",
+    "# A função retorna um DataFrame com os top N itens recomendados e seus títulos\n",
+    "# A função aceita um parâmetro n_recommendations que define o número de itens a serem recomendados\n",
+    "# A função usa a função predict_rating para prever a nota de um usuário para um item\n",
+    "# A função usa a matriz de treinamento, a similaridade do usuário e o DataFrame de filmes\n",
     "def recomendar(user_id, train_matrix, user_similarity_df, movies, n_recommendations=5):\n",
     "    # Obter todos os itens\n",
     "    all_items = train_matrix.columns\n",
